--- a/src/build.gradle
+++ b/src/build.gradle
@@ -12,4 +12,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'com.maxmind.geoip2:geoip2:2.13.1'
 }
