--- a/src/build.gradle
+++ b/src/build.gradle
@@ -13,4 +13,6 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'com.maxmind.geoip2:geoip2:2.13.1'
+    compile "com.google.zxing:core:3.3.0"
+    compile 'com.google.zxing:javase:3.3.0'
 }
